client/src/App.css
/* ... */
.content-actions-btn {
  background: none;
  border: 2px solid #eef1f5;
  border-radius: 15px;
  padding: .3rem 1rem;
  font-size: var(--responsive-font);
  transition: .2s background-color;
}

.content-actions-btn:hover {

  /* color: #353952; */
  background-color: #eef1f5;
  /* border: #353952 2px solid; */
}

.player-bar {
  display: flex;
  flex-flow: row wrap;
  /* border: red 1px solid; */
  width: clamp(260px, 35%, 95%);
  min-height: fit-content;
  height: 32px;
  padding-inline: 15px;
  /* background-color: rgba(255, 255, 255, 0.489); */
  z-index: 30;
  border-radius: 20px;
  position: fixed;
  bottom: 20px;
  left: 50%;
  gap: 5%;
  transform: translateX(-50%);
  transition: height .1s ease-in-out
}

.full-screen {
  width: 100%;
  height: 100%;
  left: 50%;
  top: 0;
  z-index: 90;
  flex-direction: column;
  align-items: center;
}



.full-screen .play-bar-info {
  flex: 0;
  width: fit-content;
  background: none;
  flex-direction: column;
  order: 2;
  color: white;
  font-size: .8rem;
}

.full-screen .play-bar-info div {
  width: fit-content;
  max-width: fit-content;
}

.full-screen .play-bar-info h2,
h3 {
  font-size: calc(2rem - .8vw);
  font-weight: 300;
  overflow: visible;
  text-overflow: initial;
  text-align: center;
}

.full-screen .play-bar-info h3 {

  font-size: calc(2rem - .8vw);
  font-weight: 300;
  overflow: visible;
  text-overflow: initial;
  text-align: center;
}



.full-screen .player-img {
  border-radius: 10px;
  inline-size: 250px;
  block-size: 250px;
}

.full-screen .progress-container {
  order: 3;
  background-color: rgb(188, 187, 187);
  width: 90%;
  height: 1.5%;
  margin-inline: 5% 5%;
  border-radius: 50px;
}

.full-screen .player-actions-bar {
  color: white;
  gap: 10%;
  justify-content: center;
  min-width: 90%;
  order: 4;
}

.full-screen .player-actions-bar div {

  margin-left: auto;
  flex: 2;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 15%;
  padding-inline-start: 15%;
}


.full-screen .resize-window {

  display: none;
}

.full-screen .player-actions-bar div .not-a-button {

  /* background-color: white; */
  color: rgb(33, 33, 33);
  padding: 20px 25px;
  border-radius: 50%;
}

.full-screen .player-actions-bar .shuffle-button {

  margin-left: auto;
  color: white
}


.full-screen .player-additional-tools {
  min-width: 98%;
  margin-inline: 1%;
  margin-top: 1%;
}

.full-screen .player-additional-tools .dropdown-menu {
  bottom: -105px;
}

.full-screen svg {

  width: 2rem;
  height: 2rem;
}

.flex-wrapper {

  display: flex;
  justify-content: center;
}



.player-img {
  width: 30px;
  height: 30px;
  border-radius: 50%;
  object-fit: cover;
  animation: spin 1.3s linear forwards, hue 2s ease-in-out 1.3s forwards;
}

.player-actions-bar {
  /* flex-grow: 1; */
  /* border: #1DB954 1px solid; */
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2%;
  max-width: 20%;
}

.player-bar i {
  font-size: calc(var(--responsive-font) + 5px)
}



.play-bar-info {
  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  gap: .8rem;
  flex-grow: 1;
  flex-shrink: 0;
  max-width: 55%;
  border-radius: 30px;
  padding-inline: 2px;
  background-color: #dddddfb4;
  white-space: nowrap;
}

.play-bar-info div {
  overflow: hidden;
  flex: 1;
  max-width: 100%;
  width: 100%;
  text-overflow: ellipsis;
}

.play-bar-info h2,
h3 {
  text-align: left;
  font-size: clamp(.7rem, 11px, 1rem);
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  margin-block: 3%;
}

.progress-container {
  width: 100%;
  height: 4px;
  cursor: pointer;
  border-radius: 30px;
  background-color: #dddddfb4;
}

.progress-bar {
  width: var(--progress-width);
  background-color: var(--secondary-color);
  height: 100%;
  transition: width 0.2s ease-in-out;
  position: relative;
}

.progress-bar:hover {

  background-color: white;
}

.progress-bar::after {

  content: '';
  height: 8px;
  width: 8px;
  background-color: white;
  position: absolute;
  right: 0px;
  top: -3px;
  border-radius: 50%;
  opacity: 0;
}

.progress-bar:hover::after {

  opacity: 1;
}

.player-additional-tools {
  margin-left: auto;
  display: flex;
  align-items: center;
}

@media (max-width: 870px) {

  .header-wrapper {
    gap: 7%
  }
}

@media (max-width: 630px) {

  .player-bar {
    bottom: 15vh;
  }

  .nav {
    margin-block: 0;
    position: absolute;
    bottom: 0dvh;
    /* top:93vh; */
    width: 100dvw;
    min-height: 7dvh;
    border-radius: 0;
    flex-grow: 0;
    left: 0;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 30%;
  }

  .nav a {
    margin-block: 0;
  }


}

@media (max-width: 470px) {


  .content-wrapper {

    margin: 0
  }


  .content-wrapper {
    height: 81vh;
    width: 95vw;
  }

  .track-list {
    height: 100vh;
  }

  .content-layout-root .track-list {

    height: fit-content;
  }


  .header-wrapper {
    gap: 3%
  }

}

